@@ -1693,9 +1693,6 @@ JDK_URL = $(ICEDTEA_HG_URL)/jdk
 LANGTOOLS_URL = $(ICEDTEA_HG_URL)/langtools
 HOTSPOT_URL = $(ICEDTEA_HG_URL)/hotspot
 
-if USE_ALT_OPENJDK_SRC_ZIP
-  OPENJDK_SRC_ZIP = $(ALT_OPENJDK_SRC_ZIP)
-else
 if USE_HG
   OPENJDK_SRC_ZIP = 
   CORBA_SRC_ZIP =
@@ -1705,18 +1702,41 @@ if USE_HG
   LANGTOOLS_SRC_ZIP =
   HOTSPOT_SRC_ZIP =
 else
+if USE_ALT_OPENJDK_SRC_ZIP
+  OPENJDK_SRC_ZIP = $(ALT_OPENJDK_SRC_ZIP)
+else
   OPENJDK_SRC_ZIP = openjdk.tar.gz
+endif
+if USE_ALT_CORBA_SRC_ZIP
+  CORBA_SRC_ZIP = $(ALT_CORBA_SRC_ZIP)
+else
   CORBA_SRC_ZIP = corba.tar.gz
+endif
+if USE_ALT_JAXP_SRC_ZIP
+  JAXP_SRC_ZIP = $(ALT_JAXP_SRC_ZIP)
+else
   JAXP_SRC_ZIP = jaxp.tar.gz
+endif
+if USE_ALT_JAXWS_SRC_ZIP
+  JAXWS_SRC_ZIP = $(ALT_JAXWS_SRC_ZIP)
+else
   JAXWS_SRC_ZIP = jaxws.tar.gz
+endif
+if USE_ALT_JDK_SRC_ZIP
+  JDK_SRC_ZIP = $(ALT_JDK_SRC_ZIP)
+else
   JDK_SRC_ZIP = jdk.tar.gz
+endif
+if USE_ALT_LANGTOOLS_SRC_ZIP
+  LANGTOOLS_SRC_ZIP = $(ALT_LANGTOOLS_SRC_ZIP)
+else
   LANGTOOLS_SRC_ZIP = langtools.tar.gz
-  HOTSPOT_SRC_ZIP = hotspot.tar.gz
 endif
-endif
-
 if USE_ALT_HOTSPOT_SRC_ZIP
   HOTSPOT_SRC_ZIP = $(ALT_HOTSPOT_SRC_ZIP)
+else
+  HOTSPOT_SRC_ZIP = hotspot.tar.gz
+endif
 endif
 
 if WITH_ALT_HSBUILD
@@ -1727,26 +1747,6 @@ else
   HS_MD5SUM = $(HOTSPOT_MD5SUM)
   HS_CHANGESET = $(HOTSPOT_CHANGESET)
   HS_URL = $(HOTSPOT_URL)
-endif
-
-if USE_ALT_CORBA_SRC_ZIP
-  CORBA_SRC_ZIP = $(ALT_CORBA_SRC_ZIP)
-endif
-
-if USE_ALT_JAXP_SRC_ZIP
-  JAXP_SRC_ZIP = $(ALT_JAXP_SRC_ZIP)
-endif
-
-if USE_ALT_JAXWS_SRC_ZIP
-  JAXWS_SRC_ZIP = $(ALT_JAXWS_SRC_ZIP)
-endif
-
-if USE_ALT_JDK_SRC_ZIP
-  JDK_SRC_ZIP = $(ALT_JDK_SRC_ZIP)
-endif
-
-if USE_ALT_LANGTOOLS_SRC_ZIP
-  LANGTOOLS_SRC_ZIP = $(ALT_LANGTOOLS_SRC_ZIP)
 endif
 
 CACAO_BASE_URL = http://www.complang.tuwien.ac.at
